containers/examples/minikube/4-deployment-configmaps.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  labels:
    app: example-webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-webserver
  template:
    metadata:
      labels:
        app: example-webserver
    spec:
      volumes:
        - name: text
          configMap:
            name: default
            items:
              - key: TEXT_FILE_WANNABE
                path: text
        - name: icon
          configMap:
            name: default
            items:
              - key: IMAGE_FILE_WANNABE
                path: icon.ico
      containers:
        - name: webserver
          imagePullPolicy: Never
          image: webserver
          ports:
            - containerPort: 10000
              name: http
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 15
          volumeMounts:
            - mountPath: "/tmp/files/1"
              name: text
              readOnly: true
            - mountPath: "/tmp/files/2"
              name: icon
              readOnly: true
